manifests/hetzner/observability/grafana/httproute-grafana.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-public
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: observability
    sectionName: websecure-grafana
  hostnames:
  - grafana.infra.techwerkers.nl
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: grafana
      port: 80
      weight: 1
